# ads129x-rs

./: .rustfmt.toml  Cargo.toml  README.md
src/: ads1292.rs  ads1298.rs  command.rs  common.rs  data.rs  lib.rs  register.rs  spi.rs  util.rs
tests/: basic.rs  basic2.rs
